--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,14 +19,14 @@
         app:srcCompat="@drawable/paucek" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/usermail"
         android:layout_width="280dp"
         android:layout_height="43dp"
         android:layout_marginTop="68dp"
         android:ems="10"
         android:gravity="center"
         android:inputType="text"
-        android:hint="@string/user_name"
+        android:hint="@string/email"
         android:background="@drawable/rounded_edit_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/usermail" />
 
     <Button
         android:id="@+id/lgbtn"
